--- a/Runner/Satellites/sl/sl50-xap/App.xaml
+++ b/Runner/Satellites/sl/sl50-xap/App.xaml
@@ -1,6 +1,6 @@
 ﻿<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-             x:Class="sl_50_x86_xap.App"
+             x:Class="sl_50_xap.App"
              >
     <Application.Resources>
         
