--- a/Runner/Satellites/sl/sl50-xap/MainPage.xaml
+++ b/Runner/Satellites/sl/sl50-xap/MainPage.xaml
@@ -1,13 +1,12 @@
-﻿<UserControl x:Class="sl_50_x86_xap.MainPage"
+﻿<UserControl x:Class="sl_50_xap.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="240" d:DesignWidth="320">
+    d:DesignHeight="300" d:DesignWidth="400">
 
     <Grid x:Name="LayoutRoot" Background="White">
-        <TextBlock>sl-50-x86-xap</TextBlock>
-        <TextBox x:Name="Output" Height="200"></TextBox>
+        <TextBox x:Name="Output" Height="300"></TextBox>
     </Grid>
 </UserControl>
